GOSEQ implemented tabbed bokeh data table with BUG: tab name overflows

--- a/modules/report/CSS/report.css
+++ b/modules/report/CSS/report.css
@@ -193,123 +193,8 @@ div.tabs > div:target > div, :target #tab-1 > div {
 
 div.tabs :target {
   outline: none}
-/*
-#container {
-    margin: 0 auto;
-    width: 50%;
-	margin-left: 1em;
-	margin-right: .25em;
+
+/* drop down selectors */
+select {
+    display: inline-block;
 }
-
-#container input {
-	height: 2.5em;
-	visibility: hidden;
-}
-
-#container label {
-	background: #f9f9f9;
-	border-radius: .25em .25em 0 0;
-	color: #888;
-	cursor: pointer;
-	display: block;
-	float: left;
-	font-size: 1em;
-	height: 2.5em;
-	line-height: 2.5em;
-	margin-right: .25em;
-	padding: 0 0.5em;
-	text-align: center;
-}
-
-#container input:hover + label {
-	background: #ddd;
-	color: #666;
-}
-
-#container input:checked + label {
-	background: #f1f1f1;
-	color: #444;
-	position: relative;
-	z-index: 6;
-	/*
-	-webkit-transition: .1s;
-	-moz-transition: .1s;
-	-o-transition: .1s;
-	-ms-transition: .1s;
-
-}
-
-#content {
-	background: #f1f1f1;
-	border-radius: 0 .25em .25em .25em;
-	min-height: 20em;
-	position: relative;
-	width: 100%;
-	z-index: 5;
-}
-
-#content div {
-	opacity: 0;
-	padding: 1.5em;
-	position: absolute;
-	z-index: -100;
-	/*
-	transition: all linear 0.1s;
-
-}
-
-#content-1 p,
-#content-2 p,
-#content-3 p,
-#content-4 p,
-#content-5 p,
-#content-6 p,
-#content-7 p,
-#content-8 p,
-#content-9 p,
-#content-10 p,
-#content-11 p,
-#content-12 p,
-#content-13 p,
-#content-14 p,
-#content-15 p,
-#content-16 p,
-#content-17 p,
-#content-18 p,
-#content-19 p,
-#content-20 p,
-#content-21 p {
-	clear: both;
-	margin-bottom: 1em;
-}
-
-
-#container input#tab-1:checked ~ #content #content-1,
-#container input#tab-2:checked ~ #content #content-2,
-#container input#tab-3:checked ~ #content #content-3,
-#container input#tab-4:checked ~ #content #content-4,
-#container input#tab-5:checked ~ #content #content-5,
-#container input#tab-6:checked ~ #content #content-6,
-#container input#tab-7:checked ~ #content #content-7,
-#container input#tab-8:checked ~ #content #content-8,
-#container input#tab-9:checked ~ #content #content-9,
-#container input#tab-10:checked ~ #content #content-10,
-#container input#tab-11:checked ~ #content #content-11,
-#container input#tab-12:checked ~ #content #content-12,
-#container input#tab-13:checked ~ #content #content-13,
-#container input#tab-14:checked ~ #content #content-14,
-#container input#tab-15:checked ~ #content #content-15,
-#container input#tab-16:checked ~ #content #content-16,
-#container input#tab-17:checked ~ #content #content-17,
-#container input#tab-18:checked ~ #content #content-18,
-#container input#tab-19:checked ~ #content #content-19,
-#container input#tab-20:checked ~ #content #content-20,
-#container input#tab-21:checked ~ #content #content-21{
-    opacity: 1;
-    z-index: 100;
-}
-
-input.visible {
-  visibility: visible !important;
-}
-*/
